<resources>
    <string name="app_name">SmartProduceManagementSystem</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="signup_successful">SignUp Successful</string>
    <string name="signup_failed">SignUp Failed</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed</string>
    <string name="empty_fields_are_not_allowed">Empty fields are not allowed</string>
    <string name="please_enter_correct_email">Please Enter a valid email address</string>
    <string name="invalid_password_format">Be sure password must be least 6 characters, include a digit, a special character, and an uppercase letter.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_yet_registered_sign_up">"Not yet registered? Sign Up"</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already a user? Login instead!</string>
    <string name="welcome_message">SmartSelf Innovators</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="default_web_client_id">Default Web Client Id</string>
    <string name="google_sign_in_failed">"Google Sign in Failed "</string>
    <string name="full_name">Full Name</string>
    <string name="full_name_cannot_be_empty">Name can\'t be empty</string>
    <string name="phone_number_cannot_be_empty">number can\'t be empty</string>
    <string name="phone_number">Phone Number</string>
    <string name="splash_title">Smart Produce Management System</string>
    <string name="smartshelf_innovators">SmartShelf Innovators</string>
    <string name="remember_me">Remember me?</string>
    <string name="settings">Settings</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="log_out">Log Out</string>
    <string name="feedback">Feedback</string>
    <string name="alert_icon_description">Alert_Icon</string>
    <string name="sensor_icon_description">Sensor_Icon</string>
    <string name="refresh">REFRESH</string>
    <string name="userprefs">UserPrefs</string>
    <string name="loggedin">loggedIn</string>
    <string name="name">name</string>
    <string name="phone">phone</string>
    <string name="users">Users</string>
    <string name="regex_email_validation" translatable="false">^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}$</string>
    <string name="regex_password_validation" translatable="false"><![CDATA[^(?=.*[A-Z])(?=.*\\d)(?=.*[@$!%*?&])[A-Za-z\\d@$!%*?&]{6,}$]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email">Please enter a valid email</string>
    <string name="invalid_password">Password must be least 6 characters, include a digit, a special character, and an uppercase letter.</string>
    <string name="confirm_password_cannot_be_empty">Confirm Your Password</string>
    <string name="passwords_must_match">Password didn\'t Match</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="d_10" translatable="false">\\d{10}</string>
    <string name="darkModeKey">dark_mode</string>
    <string name="lockScreenKey">lock_screen</string>
    <string name="settingsprefs">SettingsPrefs</string>
    <string name="no_user_logged_in">No user logged in</string>
    <string name="guest_user">Guest user</string>
    <string name="textview">TextView</string>
    <string name="employee">Employee</string>
    <string name="home">home</string>
    <string name="help">help</string>
    <string name="profile">profile</string>
    <string name="comment">Comments</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="back">Back</string>
    <string name="lastsubmissiontime">LastSubmissionTime</string>
    <string name="feedbackprefs">FeedbackPrefs</string>
    <string name="toast_validating_inputs">Please fill all fields and provide a rating</string>
    <string name="rating">rating</string>
    <string name="devicemodel">deviceModel</string>
    <string name="failed_to_submit_feedback">"Failed to submit feedback: "</string>
    <string name="d_hours_and_d_minutes">%d hours and %d minutes</string>
    <string name="you_can_submit_feedback_again_in">"You can submit feedback again in "</string>
    <string name="feedback_submitted">Feedback Submitted</string>
    <string name="thank_you_for_your_feedback">Thank you for your feedback!</string>
    <string name="ok">OK</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="are_you_sure_you_want_to_go_back">Are you sure you want to go back?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_fragment">current_fragment</string>
    <string name="exit_app">Exit App</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="logged_out_successfully">Logged Out Successfully</string>
    <string name="confirm_logout">Confirm LogOut?</string>
    <string name="notificationsKey">notification enabled</string>
    <string name="notifications_enabled">notification enabled</string>
    <string name="notifications_disabled">notification disabled</string>
    <string name="permission_denied">permission Denied</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="password_icon">Password Icon</string>
    <string name="toggle_password_visibility">"Toggle Password Visibility "</string>
    <string name="save_changes">Save Changes</string>
    <string name="back_button">Back Buttton</string>
    <string name="user_email">User Email</string>
    <string name="please_fill_all_fields_and_provide_a_rating">Please Fill All Fields And Provide A Rating</string>
    <string name="empty">" "</string>
    <string name="wait_d_hours_d_min">"%d hours %d min "</string>
    <string name="inventory">Inventory</string>
    <string name="no_data_available">"No data Available "</string>
    <string name="error_getting_data">Error Getting Data</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add">Add</string>
    <string name="item_added">Item Added</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="cancel">Cancel</string>
    <string name="error_adding_item">Error Adding Item</string>
    <string name="item">Item</string>
    <string name="search">Search</string>
    <string name="item_removed">Item Removed</string>
    <string name="item_not_found">Item Not Found</string>
    <string name="edit_item">Edit Item</string>
    <string name="update">Update</string>
    <string name="item_updated">Item Updated</string>
    <string name="password_update">Password Update</string>
    <string name="error_updating_password">"Error updating password "</string>
    <string name="failed_to_update_password_please_try_again">Failed to update password please try again</string>
    <string name="password_updated_successfully">Password updated successfully</string>
    <string name="new_password_must_include_uppercase_lowercase_numbers_and_special_characters">New password must include uppercase, lowercase, numbers and special characters</string>
    <string name="new_password_cannot_be_empty">New password cannot be empty</string>
    <string name="re_authentication">Re Authentication</string>
    <string name="error_during_re_authentication">Error during re authentication</string>
    <string name="re_authentication_failed_please_check_your_current_password">Re authentication failed please check your current password</string>
    <string name="successful_re_authentication">Successful re authentication</string>
    <string name="current_password_is_not_strong_please_check_its_format">Current password is not strong please check its format</string>
    <string name="current_password_cannot_be_empty">Current password cannot be empty</string>
    <string name="confirm">Confirm</string>
    <string name="re_authenticate">re authentication</string>
    <string name="enter_your_current_password_to_proceed">Enter your current password to proceed</string>
    <string name="user_email_is_missing">User email is missing</string>
    <string name="firestore">Firestore</string>
    <string name="error_updating_profile">Error updating profile</string>
    <string name="failed_to_update_profile">Failed to update profile</string>
    <string name="profile_updated_successfully">Profile updated successfully</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="password_must_include_uppercase_lowercase_numbers_and_special_characters">Passowrd must include uppercase, lowercase, numbers and special characters</string>
    <string name="error_fetching_user_details">Error fetching user details</string>
    <string name="no_user_data_found_in_the_database">No user data found in the database</string>
    <string name="user_data_not_found">User data not found</string>
    <string name="space">" "</string>
    <string name="dashboarddata">Dashboarddata</string>
    <string name="latestdata">Latestdata</string>
    <string name="percentage_sign">%</string>
    <string name="degree_celcius">°C</string>

    <!-- Greetings -->
    <string-array name="greetings">
        <item>Hello there,\nlooks like it\'s gonna be a great day!</item>
        <item>Good day!\nReady to manage your inventory?</item>
        <item>Hello!\nAll systems operational.</item>
        <item>Welcome back!\nYour insights are ready.</item>
        <item>Hi there,\ntime to check today’s metrics!</item>
    </string-array>

    <!-- Alert Messages -->
    <string-array name="alert_messages">
        <item>Unusual behavior in bakery section</item>
        <item>Cold Beverages require Immediate Temperature Check</item>
        <item>Stock depletion alert in dairy products</item>
        <item>Temperature rise detected in frozen foods aisle</item>
    </string-array>

    <!-- Stock Messages -->
    <string-array name="stock_messages">
        <item>Deli: 30% - Needs Refill</item>
        <item>Produce: 80% - Good Enough</item>
        <item>IceCream: 50% - Running out.</item>
        <item>Beverages: 70% - Adequate</item>
        <item>Bakery: 60% - Consider Restocking</item>
    </string-array>

    <!-- Sensor Messages -->
    <string-array name="sensor_messages">
        <item>High temperature in Frozen Foods</item>
        <item>Lighting issues in Dairy</item>
        <item>Moderate humidity in Produce</item>
        <item>Excessive CO2 levels in Greenhouse</item>
        <item>Ventilation failure in Bakery</item>
        <item>Stable conditions in Meat Section</item>
        </string-array>

    <string-array name="regulators_messages">
        <item>Check if the temperature\nsettings are optimal.</item>
        <item>Perform a quick system\ndiagnostics check.</item>
        <item>Remember to adjust the\nlighting for better energy\nconservation.</item>
        <item>Is the humidity okay?</item>
        <item>What changes do we need\nto make today?</item>
        <item>Review the energy usage\nreports from yesterday.</item>
        <item>Ensure the system is\ncalibrated correctly.</item>
        <item>Verify that all sensors are\nfunctioning properly.</item>
    </string-array>
</resources>